--- a/shortener-API/package.json
+++ b/shortener-API/package.json
@@ -7,9 +7,11 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0"
   },
