--- a/shortener-API/package.json
+++ b/shortener-API/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.2",
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0"
   },
