--- a/shortener-API/package.json
+++ b/shortener-API/package.json
@@ -6,6 +6,9 @@
     "start": "node ./bin/www",
     "dev": "nodemon"
   },
+  "engines": {
+    "node": "^16.14.0"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
